# agentic-rl

./: .gitignore  .gitmodules  LICENSE  README.md
agent-rl/api/: .env.example  README.md  main.py  pipeline_api.py  pyproject.toml  requirements.txt  task_generator.py  task_schema.py  task_utils.py  test_stream.py
agent-rl/api/generated_tasks/weather-api-openmeteo_001/: docker-compose.yaml  run-tests.sh  solution.sh  task.yaml
agent-rl/api/generated_tasks/weather-api-openmeteo_001/tests/: test_outputs.py
agent-rl/api/generated_tasks/weather-api-openmeteo_002/: docker-compose.yaml  run-tests.sh  solution.sh  task.yaml
agent-rl/api/generated_tasks/weather-api-openmeteo_002/tests/: test_outputs.py
agent-rl/api/generated_tasks/weather-api-openmeteo_003/: Dockerfile  docker-compose.yaml  run-tests.sh  solution.sh  task.yaml
agent-rl/api/generated_tasks/weather-api-openmeteo_003/tests/: test_outputs.py
agent-rl/email-automation-agentmail/: TESTING.md
agent-rl/example_seeds/email-automation-agentmail/: Dockerfile  docker-compose.yaml  run-tests.sh  solution.sh  task.yaml
agent-rl/example_seeds/email-automation-agentmail/tests/: test_outputs.py
agent-rl/web/: package-lock.json  package.json
agent-rl/web/src/app/: globals.css  layout.tsx  page.tsx  typography.js
agent-rl/web/src/components/: DemoLoop.tsx  ScenarioInput.tsx  SeedTaskUpload.tsx  TaskDetailModal.tsx  TaskGenerationPanel.tsx  TrainingControl.tsx  ValidationPanel.tsx
agent-rl/web/src/components/ui/: dialog.tsx
